# rust_cms

./: .env.example  .gitignore  Cargo.toml  README.md
db/: db  db.sql  setup_db.sh
src/: auth.rs  db.rs  main.rs  routes.rs  services.rs
