[package]
name = "rust_cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
actix-multipart = "0.4.0"
actix-cors = "0.6.2"
dotenv = "0.15.0"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rusqlite = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-argon2 = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
